# TPM-Access-Layer

./: .gitignore  CHANGES  README
aavs_daq/: README.md
aavs_daq/doc/: info.txt  xGPU.txt
aavs_daq/python/: aavs_daq_plotter.py  aavs_daq_receiver.py  interface.py  main.py  persisters.py
aavs_daq/scripts/: emulate_channel_data.py  python_receiver.py  reset_receive.sh  setup_receive.sh  test_antenna_data.py  test_beam_data.py  test_channelised_data.py
aavs_daq/simulator/: channelised_spead_sim.py  plot_packets.py
aavs_daq/src/: AntennaData.cpp  AntennaData.h  BeamformedData.cpp  BeamformedData.h  CMakeLists.txt  ChannelisedData.cpp  ChannelisedData.h  Daq.cpp  Daq.h  DataConsumer.h  DoubleBuffer.cpp  DoubleBuffer.h  NetworkReceiver.cpp  NetworkReceiver.h  RealTimeThread.h  RingBuffer.cpp  RingBuffer.h  Utils.h  main.cpp
doc/: Changes.txt  Feature list.txt  Memory Map XML Example.xml  Memory map.xsd
doc/User Guide/: UserGuide.tex
doc/XML/: Instrument.xml  TPMDevices.xml  TPMMap.xml  XilinxBoardMap.xml  XilinxDevices.xml  cpld.xml  fpga.xml  map.xml  uniboard_map.xml
doc/riccardo/: TPMDevices.xml  TPMMap.xml  example.xml  spi.py  tpm.py  tpm_bsp.py  (+1 more)
python/: TODO.txt  aavs_control.py  accesslayer.py  definitions.py  instrument.py  interface.py  reflectionTest.py  setup.py  setup.py~  test.py  test_roach.py  test_tpm.py  tpm.py  uniboard_aavs_test.py
scripts/: mock_tpm.py  mock_tpm.py~  mock_uniboard_node.py  python_wrapper_test.py
src/: .cproject  .project  AccessLayer.cpp  AccessLayer.hpp  Board.cpp  Board.hpp  Definitions.hpp  Makefile  MemoryMap.cpp  MemoryMap.hpp  Protocol.cpp  Protocol.hpp  TODO.txt  UCP.hpp  Utils.cpp  Utils.hpp  katcp_test.cpp  main.cpp
src/server/: CMakeLists.txt  ChannelisedDataReader.cpp  ChannelisedDataReader.h  Makefile  main.cpp  message.pb.cc  message.pb.h  message.proto  server  utils.cpp  utils.hpp
src/server/hdf5/: AAVSFile.h  ChannelFormatFileManager.cpp  ChannelFormatFileManager.h  FileModes.h  RawFormatFileManager.h
(+194 files in other folders)
